Fix padding boxes on mobile phones or very low res

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ header a:hover {
     float: left;
     width: 30%;
     text-align: center;
-    padding: 10px;
+    padding: 1%;
 
 }
 
